[package]
name = "hidey"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
log4rs = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
image = "0.23"
ring = "0.16.20"
lazy_static = "1.4"
glib = "^0"
gtk = { version = "0.8.1", package = "gtk4", features = ["v4_6"] }
gio = "^0.9"
static-files = "0.2"

[build-dependencies]
static-files = "0.2"
